acceso a datos terminados y revisados

--- a/acceso-datos/1trim/dbConection/Jdbc-learning/pom.xml
+++ b/acceso-datos/1trim/dbConection/Jdbc-learning/pom.xml
@@ -19,7 +19,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.31</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version> <!-- Verifica la última versión en https://search.maven.org/artifact/org.projectlombok/lombok -->
+            <scope>provided</scope>
+        </dependency>
 
 
     </dependencies>
