avances aad y moviles

--- a/prog-multi-dispmoviles/2trim/PoliticasPriv/app/src/main/AndroidManifest.xml
+++ b/prog-multi-dispmoviles/2trim/PoliticasPriv/app/src/main/AndroidManifest.xml
@@ -17,11 +17,24 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+
+
+
+        <activity
+            android:name=".ActivityHija" android:parentActivityName=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityHija"/>
+
 
     </application>
 
