--- a/acceso-datos/2trim/ORM_JPA_learning/pom.xml
+++ b/acceso-datos/2trim/ORM_JPA_learning/pom.xml
@@ -17,7 +17,8 @@
   </properties>
 
   <dependencies>
-<dependency>
+      
+    <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>6.0.2.Final</version>
@@ -27,7 +28,7 @@
       <artifactId>jaxb-runtime</artifactId>
       <version>3.0.2</version>
     </dependency>
-<dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.version}</version>
@@ -38,7 +39,9 @@
         <artifactId>junit-jupiter-engine</artifactId>
         <version>${junit.version}</version>
         <scope>test</scope>
-      </dependency>  </dependencies>
+      </dependency>
+
+  </dependencies>
 
   <build>
     <plugins>
