--- a/prog-multi-dispmoviles/2trim/FedericoMigas/Ventanas/app/src/main/AndroidManifest.xml
+++ b/prog-multi-dispmoviles/2trim/FedericoMigas/Ventanas/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecActivity">
+        <activity android:name=".Activity2">
 
         </activity>
-        <activity android:name=".ThirdActivity">
+        <activity android:name=".Activity3">
 
         </activity>
         <activity android:name=".Register" android:parentActivityName=".MainActivity">
