--- a/acceso-datos/2trim/repaso-examen/JPA-Learning/pom.xml
+++ b/acceso-datos/2trim/repaso-examen/JPA-Learning/pom.xml
@@ -27,7 +27,12 @@
       <artifactId>jaxb-runtime</artifactId>
       <version>3.0.2</version>
     </dependency>
-<dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.31</version>
+      </dependency>
+      <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.version}</version>
